[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dy-cli"
version = "0.2.2"
description = "抖音命令行工具 — 发布、搜索、下载、互动、数据分析、热榜、直播"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Youhai", email = "youhai020616@gmail.com" }]
keywords = ["douyin", "dy", "tiktok", "抖音", "cli", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27.0",
    "playwright>=1.40",
    "browser-cookie3>=0.19",
    "PyYAML>=6.0",
]

[project.scripts]
dy = "dy_cli.main:cli"

[project.urls]
Homepage = "https://github.com/Youhai020616/douyin"
Repository = "https://github.com/Youhai020616/douyin"
Issues = "https://github.com/Youhai020616/douyin/issues"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E402", "E501"]  # E402: imports after click group; E501: long lines in UA/JS strings

[tool.ruff.lint.per-file-ignores]
"src/dy_cli/commands/init.py" = ["F401"]  # playwright import for availability check

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/dy_cli", "scripts"]
